@@ -1,5 +1,8 @@
 Changes in stable release 2.4.14 (not released yet)
 
+* Modules do not crash anymore when more than 126 windows are on
+  the desktop.
+
 -------------------------------------------------------------------
 
 Changes in stable release 2.4.13 (1-Nov-2002)
