@@ -1,3 +1,11 @@
+2002-11-07  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/stack.c (BroadcastRestack):
+	split long packets, fixed a bug and cleaned up
+
+	* libs/Module.c (ReadFvwmPacket):
+	ignore packets that are too long
+
 2002-11-01  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* NEWS:
